; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_git_config_expiry_date.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_git_config_expiry_date.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"'%s' for '%s' is not a valid timestamp\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_config_expiry_date(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %3
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @config_error_nonbool(i8* %11)
  store i32 %12, i32* %4, align 4
  br label %24

13:                                               ; preds = %3
  %14 = load i8*, i8** %7, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @parse_expiry_date(i8* %14, i32* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  %19 = call i32 @_(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %20 = load i8*, i8** %7, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @error(i32 %19, i8* %20, i8* %21)
  store i32 %22, i32* %4, align 4
  br label %24

23:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %24

24:                                               ; preds = %23, %18, %10
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @config_error_nonbool(i8*) #1

declare dso_local i64 @parse_expiry_date(i8*, i32*) #1

declare dso_local i32 @error(i32, i8*, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
